bunch of fixes, started using tsid