@@ -1,23 +1,27 @@
 package org.gunnarro.microservice.todoservice.config;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.session.NullAuthenticatedSessionStrategy;
+import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 
 /**
  * Security configuration for Rest API and endpoints
  */
+@Slf4j
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
@@ -25,35 +29,50 @@ public class SecurityConfig {
     /**
      * Spring Security 6 protects against CSRF attacks by default for unsafe HTTP methods,
      * such as a POST request, so no additional code is necessary <a href="https://docs.spring.io/spring-security/reference/servlet/exploits/csrf.html">spring security csrf</a>
-     *
+     * <p>
      * NOTE! Problem with “preflight” request which used HTTP OPTIONS, must skip authorization for such requests.
-     *
      */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                .cors(Customizer.withDefaults())
+                .csrf((csrf) -> csrf
+                        .disable())
                 .authorizeHttpRequests(
                         (requests) -> requests
-                                .requestMatchers(HttpMethod.GET, "/api-docs/*", "/swagger-resources/**", "/swagger-ui.html", "/actuator/**").permitAll()
+                                .requestMatchers(HttpMethod.GET, "/api-docs/**", "/swagger-resources/**", "/swagger-ui.html", "/actuator/**").permitAll()
                                 .anyRequest().authenticated()
                 )
-                //.cors(Customizer.withDefaults()) // not needed, set as default.
-                //.csrf(Customizer.withDefaults()) // not needed set as default.
+                //        .cors(Customizer.withDefaults()) // not needed, set as default.
+                //         .csrf(AbstractHttpConfigurer::disable) // not needed set as default. // fixme, default do not allow POST, PUT, DELETE
+                //.csrf((csrf) -> csrf
+                //        .disable()
+                    //    .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse()) // http only because of java script
+                    //    .sessionAuthenticationStrategy(new NullAuthenticatedSessionStrategy())
+                //)
+                //.sessionManagement().addSessionAuthenticationStrategy(SessionCreationPolicy.STATELESS)
                 .httpBasic(Customizer.withDefaults());
         return http.build();
     }
 
-  //  @Bean
+    /**
+     * CORS configuration with Spring Security after bypassing pre-flight requests.
+     * Since this server should be accessed from react client running at port 3000
+     * @return
+     */
+    @Bean
     protected CorsConfigurationSource corsConfigurationSource() {
+        //     org.springframework.security.web.csrf.CsrfFilter csrf;
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("/**"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS", "HEAD"));
+        configuration.setAllowedOrigins(List.of("http://127.0.0.1:3000", "http://localhost:3000"));
+        configuration.setAllowedMethods(List.of(HttpMethod.GET.name(), HttpMethod.POST.name(), HttpMethod.PATCH.name(), HttpMethod.PUT.name(), HttpMethod.DELETE.name(), HttpMethod.OPTIONS.name(), HttpMethod.HEAD.name()));
         configuration.setAllowCredentials(true);
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Requestor-Type"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Requestor-Type"));
         configuration.setExposedHeaders(List.of("X-Get-Header"));
         configuration.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+        log.info("use custom cors config.");
         return source;
     }
 }
